Add overlay menu

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -32,8 +32,8 @@
             </div>
             <a href="#" class="button hide-for-mobile">Get Started</a>
         </nav>
-        <div class="overlay"></div>
-        <div class="header__overlay_menu">
+        <div class="overlay toggle-on"></div>
+        <div class="header__overlay_menu hide-for-desktop toggle-on" >
            <a href="http://">Home</a>
            <a href="http://">Apply to Teach</a>
            <a href="http://">Other1</a>
