Add Hero section

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="./app/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">   
     <title>Tutor Pod</title>
 </head>
 <body>
     <header class="header" id="header">
         <nav class="container flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo flex flex-ai-c wide-for-mobile ">
+            <a href="/" class="header__logo flex flex-ai-c ">
                 <img src="./images/TutorPod1.svg" alt="TutorPod">
               <span class="header__logo_title">Tutor<span class="header__logo_title_part">Pod</span> </span>
             </a>
@@ -30,7 +29,7 @@
                 <a href="# ">Other2</a>
                 <a href="# ">Other3</a>
             </div>
-            <a href="#" class="button hide-for-mobile">Get Started</a>
+            <a href="#" class="button hide-for-mobile">Sign Up</a>
         </nav>
         <div class="overlay toggle-on"></div>
         <div class="header__overlay_menu hide-for-desktop toggle-on" >
@@ -42,6 +41,24 @@
         </div>
     </header>
     <main>
+        <section class="hero container">
+                <div class="hero__illustration wide-for-mobile">
+                    <img src="./images/Hero_Illustration.svg" alt="" srcset="">
+                </div>
+                <form action="#" class="hero__action_tile wide-for-mobile">
+                    <h1 class="thin-H1">Master Any Subject<br> With Online Tutors</h1>
+                    <p>Learn any subject at your time and anywhere.</p>
+                    <input type="search" class="hero__cta_search" name="searchBar" id="searchBar" placeholder="Search by Suject or Course">
+                    <input type="submit" class="button hero__cta wide-for-mobile" value="Find a Tutor">
+                    <p class="hero__sugesstion">
+                        <strong>Popular: </strong>
+                        <a href="http://">BCA</a>,
+                        <a href="http://">Descrete Maths</a>,
+                        <a href="http://">C++</a>,
+                        <a href="http://">Java</a>
+                    </p>
+                </form>
+        </section>
         <div class="grid">
             <div class="content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus iure nesciunt id voluptatem voluptates eius vitae saepe, atque doloremque perspiciatis enim velit porro error quis dolorem tempore fuga suscipit repellat!
