Add Sidebar partially

--- a/WebContent/Admin/index.html
+++ b/WebContent/Admin/index.html
@@ -25,15 +25,75 @@
         </nav>
     </header>
     <section class="sidebar">
-        <div class="siderbar__user">
+        <div class="sidebar__user">
             <div class="sidebar__user_avatar">
                 <img src="../images/avatar.png" alt="Admin">
             </div>
-            <div class="sidebar_user_info">
-                <p>Admin Name</p>
-                <p><em>Administrator</em></p>
+            <div class="sidebar__user_info">
+                <span><b>Admin Name</b></span>
+                <span><em>Administrator</em></span>
             </div>
-
+        </div>
+        <ul class="sidebar__dropdown acc_dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <div class="sidebar__footer">
+            <a href="#" class="sidebar__footer_icon"></a>
+            <a href="#" class="sidebar__footer_icon"></a>
+            <a href="#" class="sidebar__footer_icon"></a>
         </div>
     </section>
     <main>
