Add Custom ScrollBar

--- a/WebContent/Admin/index.html
+++ b/WebContent/Admin/index.html
@@ -90,6 +90,118 @@
                 <li><a href="#">Show All Admins</a></li>
             </ul>
         </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
+        <ul class="sidebar__dropdown">
+            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
+            <ul class="sidebar__dropdown_items">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Add new Admin</a></li>
+                <li><a href="#">Show All Admins</a></li>
+            </ul>
+        </ul>
         <div class="sidebar__footer">
             <a href="#" class="sidebar__footer_icon"></a>
             <a href="#" class="sidebar__footer_icon"></a>
