Add SideBar Complete

--- a/WebContent/Admin/index.html
+++ b/WebContent/Admin/index.html
@@ -82,137 +82,17 @@
                 <li><a href="#">Show All Admins</a></li>
             </ul>
         </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
-        <ul class="sidebar__dropdown">
-            <li class="sidebar__dropdown_title">Account Settings <span class="sidebar__dropdown_title_arrow">></span></li>
-            <ul class="sidebar__dropdown_items">
-                <li><a href="#">Edit Password</a></li>
-                <li><a href="#">Add new Admin</a></li>
-                <li><a href="#">Show All Admins</a></li>
-            </ul>
-        </ul>
         <div class="sidebar__footer">
-            <a href="#" class="sidebar__footer_icon"></a>
-            <a href="#" class="sidebar__footer_icon"></a>
-            <a href="#" class="sidebar__footer_icon"></a>
+            <a href="#" class="sidebar__footer_icon" title="Admin Accounts"><img src="../images/accounts-vector.svg" alt="" srcset=""></a>
+            <a href="#" class="sidebar__footer_icon" title="TutorPod FrontEnd"><img src="../images/marketplace-vector.svg" alt="" srcset=""></a>
+            <a href="#" class="sidebar__footer_icon" title="Log Out"><img src="../images/logout-vector.svg" alt="" srcset=""></a>
         </div>
     </section>
     <main>
 
     </main>
 </body>
-<script src="../app/js/script.js">
+<script src="../app/js/admin-script.js">
 
 </script>
 </html>
