--- a/WebContent/Admin/index.html
+++ b/WebContent/Admin/index.html
@@ -106,13 +106,14 @@
     <main class="main">
         <h1 class="main__heading">Add Course</h1>
         <form action="#" method="POST" class="main__form">
+            <span class="caption">Enter Course Details</span>
             <div class="form_group">
                 <label for="course_name">Course Name</label>
-                <input type="text" name="course_name" id="course_name" required placeholder="Enter course name">
+                <input type="text" name="course_name" id="course_name" required placeholder="Enter course name ">
             </div>
             <div class="form_group">
                 <label for="name_abbr">Course Name Abbrivation</label>
-                <input type="text" name="name_abbr" id="name_abbr" required placeholder="Enter course name abbrivation">
+                <input type="text" name="name_abbr" id="name_abbr" required placeholder="Enter abbrivation e.g. BCA">
             </div>
             <div class="form_group">
                 <label for="duration_type">Duration Type</label>
@@ -124,7 +125,7 @@
             </div>
             <div class="form_group">
                 <label for="duration">Duration</label>
-                <input type="number" name="duration" id="duration" required placeholder="Enter duration of course">
+                <input type="number" name="duration" id="duration" required placeholder="Enter course duration e.g. 6">
             </div>
             <div class="form_group form_group_submit">
                 <input type="submit" class="button flat-wide-button" value="Add Course">
@@ -150,16 +151,68 @@
                         <td>BCA</td>
                         <td>Semester</td>
                         <td>6</td>
-                        <td>
-                            <a href="#"><button class="button small-round-button edit-button">Edit</button></a>
-                            <a href="#"><button class="button small-round-button delete-button">Delete</button></a>
+                        <td class="main__preview_action">
+                            <a href="#" class="button small-round-button edit-button">Edit</a>
+                            <a href="#" class="button small-round-button delete-button">Delete</a>
                         </td>
-
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Bachelor Of Computer Application</td>
+                        <td>BCA</td>
+                        <td>Semester</td>
+                        <td>6</td>
+                        <td class="main__preview_action">
+                            <a href="#" class="button small-round-button edit-button">Edit</a>
+                            <a href="#" class="button small-round-button delete-button">Delete</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="main__preview main__table">
+            <table aria-label="Course Data">
+                <caption> Recent Entries </caption>
+                <thead>
+                    <tr>
+                        <th scope="...">S.No.</th>
+                        <th scope="...">Course Name</th>
+                        <th scope="...">Name Abbr</th>
+                        <th scope="...">Duration Type</th>
+                        <th scope="...">Duration</th>
+                        <th scope="...">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Bachelor Of Computer Application</td>
+                        <td>BCA</td>
+                        <td>Semester</td>
+                        <td>6</td>
+                        <td class="main__preview_action">
+                            <a href="#" class="button small-round-button edit-button">Edit</a>
+                            <a href="#" class="button small-round-button delete-button">Delete</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Bachelor Of Computer Application</td>
+                        <td>BCA</td>
+                        <td>Semester</td>
+                        <td>6</td>
+                        <td class="main__preview_action">
+                            <a href="#" class="button small-round-button edit-button">Edit</a>
+                            <a href="#" class="button small-round-button delete-button">Delete</a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 <script src="../app/js/admin-script.js">
 
