Add Add,Edit and See Admin Bank Account

--- a/WebContent/Admin/index.html
+++ b/WebContent/Admin/index.html
@@ -110,7 +110,7 @@
             <a href="#" class="sidebar__footer_icon" title="Log Out"><img src="../images/logout-vector.svg" alt=""
                     srcset=""></a>
         </div>
-        <div id="snackbar">Invalid Request</div>
+        <div id="snackbar"><span></span></div>
     </section>
     <main class="main">
         <div class="overlaydiv">
@@ -273,6 +273,8 @@
     <footer>
 
     </footer>
+    <span onclick="showLoading()">Show</span>
+    <span onclick="hideLoading()">Hide</span>
 </body>
 <script src="../app/js/admin-script.js">
 
