--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./app/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">   
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./app/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet" />
     <title>Tutor Pod</title>
 </head>
+
 <body>
     <header class="header" id="header">
         <nav class="container flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo flex flex-ai-c ">
-                <img src="./images/TutorPod1.svg" alt="TutorPod">
-              <span class="header__logo_title">Tutor<span class="header__logo_title_part">Pod</span> </span>
+            <a href="/" class="header__logo flex flex-ai-c">
+                <img src="./images/TutorPod1.svg" alt="TutorPod" />
+                <span class="header__logo_title">Tutor<span class="header__logo_title_part">Pod</span>
+                </span>
             </a>
             <a href="#" id="btnHamburger" class="header__menu hide-for-desktop">
                 <span></span>
@@ -23,86 +28,201 @@
                 <span></span>
             </a>
             <div class="header__links hide-for-mobile">
-                <a href="#" class="header__links_dropdown">Subjects <span class="dropdown-arrow">></span></a>
-                <a href="#">Apply to Teach</a>
-                <a href="#">Other1</a>
-                <a href="# ">Other2</a>
-                <a href="# ">Other3</a>
+                <a href="#" class="underlined header__links_dropdown">Subjects <span class="dropdown-arrow">></span></a>
+                <a href="#" class="underlined">Apply to Teach</a>
+                <a href="#" class="underlined">Other1</a>
+                <a href="#" class="underlined">Other2</a>
+                <a href="#" class="underlined">Other3</a>
+                <div class="nav-dd">
+                    <ul class="nav-dd_courses">
+                        <li class="nav-dd_course"><a href="#">BCA</a>
+                            <ul class="nav-dd_course_durations">
+                                <li class="nav-dd_course_duration"><a href="#">Semester 1</a>
+                                    <ul class="nav-dd_course_duration_subjects">
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software</a></li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Basic Mathematics</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software Lab</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Business Organization</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">English</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-dd_course_duration"><a href="#">Semester 2</a>
+                                    <ul class="nav-dd_course_duration_subjects">
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software</a></li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Basic Mathematics</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software Lab</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Business Organization</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">English</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-dd_course_duration"><a href="#">Semester 3</a>
+                                    <ul class="nav-dd_course_duration_subjects">
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software</a></li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Basic Mathematics</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software Lab</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Business Organization</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">English</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-dd_course_duration"><a href="#">Semester 4</a>
+                                    <ul class="nav-dd_course_duration_subjects">
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software</a></li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Basic Mathematics</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Computer Basics and PC Software Lab</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">Business Organization</a> </li>
+                                        <li class="nav-dd_course_duration_subject"><a href="#">English</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <a href="#" id="signin-btn" class="button hide-for-mobile">Sign In</a>
+            <a href="#" class="button hide-for-mobile" id="signinBtn">Sign In</a>
         </nav>
         <div class="overlay toggle-on"></div>
-        <div class="header__overlay_menu hide-for-desktop toggle-on" >
-           <a href="http://">Home</a>
-           <a href="http://">Apply to Teach</a>
-           <a href="http://">Other1</a>
-           <a href="http://">Other2</a>
-           <a href="http://">Other3</a>
+        <div class="header__overlay_menu hide-for-desktop toggle-on">
+            <a href="http://">Home</a>
+            <a href="http://">Apply to Teach</a>
+            <a href="http://">Other1</a>
+            <a href="http://">Other2</a>
+            <a href="#" id="signinBtnNav">Sign In</a>
         </div>
         <div class="overlaydiv">
-            <h1 class="thin-H1">Welcome</h1>
             <div id="btnCross" class="header__menu cross">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-            <div class="scrollable signup-form">
-                <div class="tab-selector">
-                    <span class="tab-selector_signin">Sign In</span>
-                    <span class="tab-selector_signup">Create New Account</span>
-                </div>
-                <div class="signin">
-                    <form action="#">
-                        <input type="text" class="input-with-icon user_id" name="name" id="name" placeholder="Username or email address" required>
-                        <input type="password" class="input-with-icon user_pass"  name="password" id="password" placeholder="Password" required>
-                        <input type="hidden" name="cmd" id="cmd" value="login">
-                        <input type="submit" class="button flat-wide-button" value="Sign In">
-                    </form>
-                </div>
-                <div class="signup">
-                    
+            <div class="signup-form">
+                <div class="scrollable signup-container">
+                    <div class="tab-selector">
+                        <span href="#" class="tab-selector_signin">Sign In</span>
+                        <span href="#" class="tab-selector_signup">New Account</span>
+                    </div>
+                    <div class="signin">
+                        <form action="./UserController" method="post" id="signinForm">
+                            <input type="text" class="input-with-icon user_id" name="username" id="username"
+                                placeholder="Username or email address" required />
+                            <input type="password" class="input-with-icon user_pass" name="password" id="password"
+                                placeholder="Password" required />
+                            <input type="hidden" name="cmd" id="cmd" value="login" />
+                            <input type="submit" class="button flat-wide-button" value="Sign In" />
+                        </form>
+                        <p><a href="#">Forgot Password ?</a></p>
+                    </div>
+                    <div class="signup">
+                        <form action="./UserController" method="post" id="signupForm">
+                            <input type="text" class="input-with-icon user_name user_fname" name="fname" id="fname"
+                                placeholder="Enter First Name" required />
+                            <input type="text" class="input-with-icon user_name user_lname" name="lname" id="lname"
+                                placeholder="Enter Last Name" required />
+                            <select name="gender" id="gender" class="input-with-icon user_gender">
+                                <option value="default" selected disabled>Select Gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Other">Other</option>
+                            </select>
+                            <input type="text" class="input-with-icon user_id" name="username" id="username"
+                                placeholder="Enter Username" required />
+                            <input type="text" class="input-with-icon user_email" name="email" id="email"
+                                placeholder="Enter Email Adderss" required />
+                            <input type="tel" class="input-with-icon user_tel" name="mobile_no" id="mobile_no"
+                                placeholder="Enter Mobile Number" required />
+                            <input type="password" class="input-with-icon user_pass" name="password" id="password"
+                                placeholder="Enter Password" required />
+                            <input type="hidden" name="cmd" id="cmd" value="login" />
+                            <input type="submit" class="button flat-wide-button" value="Sign Up" />
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+
     </header>
     <main>
         <section class="hero container">
-                <div class="hero__illustration wide-for-mobile">
-                    <img src="./images/Hero_Illustration.svg" alt="" srcset="">
-                </div>
-                <form action="#" class="hero__action_tile wide-for-mobile" method="GET">
-                    <h1 class="thin-H1">Master Any Subject<br> With Online Tutors</h1>
-                    <p>Learn any subject at your time and anywhere.</p>
-                    <input type="search" class="hero__cta_search input-with-icon" name="searchBar" id="searchBar" placeholder="Search by Suject or Course" required>
-                    <input type="submit" class="button hero__cta flat-wide-button" value="Find a Tutor">
-                    <p class="hero__sugesstion">
-                        <strong>Popular: </strong>
-                        <a href="http://">BCA</a>,
-                        <a href="http://">Descrete Maths</a>,
-                        <a href="http://">C++</a>,
-                        <a href="http://">Java</a>
-                    </p>
-                </form>
+            <div class="hero__illustration wide-for-mobile">
+                <img src="./images/Hero_Illustration.svg" alt="" srcset="" />
+            </div>
+            <form action="#" class="hero__action_tile wide-for-mobile" method="GET">
+                <h1 class="thin-H1">
+                    Master Any Subject<br />
+                    With Online Tutors
+                </h1>
+                <p>Learn any subject at your time and anywhere.</p>
+                <input type="search" class="hero__cta_search input-with-icon" name="searchBar" id="searchBar"
+                    placeholder="Search by Suject or Course" required />
+                <input type="submit" class="button hero__cta flat-wide-button" value="Find a Tutor" />
+                <p class="hero__sugesstion">
+                    <strong>Popular: </strong>
+                    <a href="http://">BCA</a>, <a href="http://">Descrete Maths</a>,
+                    <a href="http://">C++</a>,
+                    <a href="http://">Java</a>
+                </p>
+            </form>
         </section>
         <div class="grid">
-            <div class="content">
-            </div>
+            <div class="content"></div>
         </div>
     </main>
-    <footer>
-        
-    </footer>
+    <footer></footer>
     <script src="./app/js/script.js"></script>
     <script src="./app/js/jquery-3.6.0.min.js"></script>
     <script>
-        $("#signin-btn").click(function (){
-            $(".overlaydiv").css("animation","fade-in ease-in 0.3s forwards");
-            $(".overlaydiv").css("visibility","visible");
+        $(document).ready(showSignIn);
+        $("#signinBtn").click(showSignInDiv);
+        $("#signinBtnNav").click(showSignInDiv);
+        $("#btnCross").click(hideSignInDiv);
+        $(".tab-selector_signin").click(showSignIn);
+        $(".tab-selector_signup").click(showSignUp);
+        $(".header__links_dropdown").hover(()=>{
+            $(".nav-dd").css("display","block");
         });
-        $("#btnCross").click(function (){
-            $(".overlaydiv").css("animation","fade-out ease-in 0.3s forwards");
-            $(".overlaydiv").css("visibility","hidden");
+        $(".nav-dd").hover(()=>{
+            $(".nav-dd").removeAttr("style");
+        })
+        function showSignInDiv() {
+            $("body").css("overflow-y","hidden");
+            $(".overlaydiv").css("animation", "fade-in ease-in 0.3s forwards");
+            $(".overlaydiv").css("visibility", "visible");
+        }
+        function hideSignInDiv() {
+            $("body").css("overflow-y","unset");
+            $(".overlaydiv").css("animation", "fade-out ease-in 0.3s forwards");
+            $(".overlaydiv").css("visibility", "hidden");
+        }
+        function showSignIn() {
+            $(".signup").hide();
+            $(".signin").show();
+            $(".tab-selector_signin").addClass("tab-selector_selected");
+            $(".tab-selector_signup").removeClass("tab-selector_selected");
+        }
+        function showSignUp() {
+            $(".signin").hide();
+            $(".signup").show();
+            $(".tab-selector_signup").addClass("tab-selector_selected");
+            $(".tab-selector_signin").removeClass("tab-selector_selected");
+        }
+        $(document).on("submit", "#signupForm", function(event) {
+                var $form = $(this);
+                if($("#gender").val()==null){
+                    $("#snackbar").html("Select a gender");
+                    showToast();
+                    return false; 
+                }
+                showLoading();
+                $.post($form.attr("action"), $form.serialize(), function(response) {
+                        hideLoading();
+                        $("#snackbar").html(response); 
+                        showToast();
+                        console.log(response);
+                        fetchBankAccData();
+                        $form.trigger("reset");
+                });  
+                event.preventDefault();
         });
     </script>
 </body>
+
 </html>
